--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,79 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap");
 
-*{
-  padding: 0;
+* {
   margin: 0;
-  font-family: 'Bona Nova', serif;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-body{
-  background-color: #54E554;
-}
-.main{
-  width: 80%;
-  margin: 0 auto;
-  text-align: center;
-}
-.heading h1{
-  color:beige;
-  font-size: 48px;
-  font-weight:900;
-  letter-spacing: 1px;
-  padding-top:2rem;
-  margin: 1rem;
-}
-.search-bar{
-  margin: 1rem 0;
-  width:400px;
-  height:40px;
-  border:none;
-  outline:none;
-  border-radius: 1rem;
-  padding: 0.3rem 1rem;
-}
-.container{
-  width: 80%;
-  margin:25px auto;
-  display: grid;
-  grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
-  grid-gap: 2rem;
-}
-.card{
-  width: 180px;
-  border-radius: 1rem;
-  background-color:white;
-  padding: 5px;
-}
-.card img{
-  width: 100%;
-  border-radius: 1rem 1rem 0 0;
-}
-.card h3{
-  color:#54E554;
-  font-size: 18px;
-}
-.indexContainer{
-  display:flex;
-  margin: 2.5rem 0;
-}
-.content img{
-  width: 100%;
-  height: 600px;
-}  
-.content .inner-content{
-  background-color:#54E554;
-  color:white;
-  font-size: 1.5rem;
-  padding: 2rem;
-  text-align: center;
-  position: absolute;
-  top:45%;
-  left:50%;
-  transform: translate(-50%,-50%);
-  box-shadow: 0 5px 5px #54E554
-}
-.recipe-details{
-  width: 70%;
-  margin:2rem auto;
+
+body {
   display: flex;
   /* justify-content: center;
   align-items: center; */
@@ -82,37 +16,4 @@ body{
   background: url("../../public/assets/background (3).png") no-repeat center;
   overflow-x: hidden;
   scroll-behavior: smooth;
-}
-.ingredients,.instructions{
-  flex-basis: 50%;
-  text-align: justify;
-  color:white
-}
-.ingredients h4{
-  margin-top: 1.5rem;
-  font-weight: bold;
-}
-.indexContainer{
-  display: flex;
-  margin: 2.5rem 0;
-}
-
-.heading h4{
-  color:beige;
-  font-size: 20px;
-  font-weight:90;
-  letter-spacing: 1px;
-  padding-top:2rem;
-  margin: 1rem;
-}
-
-
-.search-button {
-  background-color:white;
-  color:black;
-  padding: 10px 20px;
-  border: none;
-  cursor: pointer;
-  border-radius: 100px;
-  font-size: 20px;
 }
